# CytScop

./: CMakeLists.txt  CytScopMiniServer.cpp  README.md
.github/workflows/: codeql.yml
Base/: Bash64.cpp  Bash64.h  CMakeLists.txt  ExecuteCommand.h
Cam/: CMakeLists.txt  LibCam.cpp  LibCam.h
Slave/: CMakeLists.txt  LibSlave.cpp  LibSlave.h
Socket/: Broadcast.c  Broadcast.cpp  Broadcast.h  CMakeLists.txt  Socket.cpp  Socket.h
Test/: CMakeLists.txt  TestBroadcast.cpp  TestCam.cpp
env/ARM64/LIBMODBUS/lib/pkgconfig/: libmodbus.pc
env/ARM64/opencv3/lib/pkgconfig/: opencv.pc
env/ARM64/opencv4/include/opencv4/opencv2/: cvconfig.h
env/X86/LIBMODBUS/lib/pkgconfig/: libmodbus.pc
